--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
             </div>
           </div>
           <div class="charts">
-            <div class="charts-left">
+            <div class="charts__left">
               <div class="charts__left__title">
                 <div>
                   <h1>Daily report</h1>
@@ -100,7 +100,7 @@
               <div id="apex1"></div>
             </div>
             <div class="charts__right">
-              <div class="charts-right-title">
+              <div class="charts__right__title">
                 <div>
                   <h1>Stats report</h1>
                   <p>District 7 , Ho Chi Minh city , VN</p>
@@ -135,7 +135,7 @@
             <img src="./img/logo.png" alt="logo" />
             <h1>Saikou</h1>
           </div>
-          <i class="fa fa-times" id="sidebarIcon" onclick="closeSidebar"></i>
+          <i class="fa fa-times" id="sidebarIcon" onclick="closeSidebar()"></i>
         </div>
         <div class="sidebar__menu">
           <div class="sidebar__link active_menu_link">
@@ -160,7 +160,7 @@
             <a href="#">Warehouse</a>
           </div>
           <div class="sidebar__link">
-            <i class="fa fa-handshake"></i>
+            <i class="fa fa-handshake-o"></i>
             <a href="#">Contact Us</a>
           </div>
           <div class="sidebar__link">
@@ -215,5 +215,6 @@
     <!--Apex Chart-->
     <script src="https://cdn.jsdelivr.net/npm/apexcharts"></script>
     <script src="./js/main.js"></script>
+    <script src="./js/charts.js"></script>
   </body>
 </html>
